# polindora_linux_build

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Polindora_linux_build_Technical Stack & Architecture Document.md  README.md  build.rs  plan.md  resources.qrc
Targets/Target_functionalityties/: polindora_everything.md
migrations/: 0001_initial.sql
packaging/: polindora.desktop
qml/: Main.qml  Theme.qml
qml/components/: BottomTabBar.qml  ColorSwatch.qml  GlassButton.qml  GlassPanel.qml  IconButton.qml  ProgressRing.qml  SegmentedControl.qml  SettingsPanel.qml  SliderRow.qml  StatCard.qml  StepperRow.qml  TaskInputRow.qml  ThemeCard.qml  TimerOrb.qml  ToggleRow.qml
scripts/: run_custom_core_tests.sh
shaders/: glass.frag  orb.frag
src/: analytics.rs  bridge.rs  main.rs  persistence.rs  task_store.rs  theme.rs  timer_engine.rs
tests/custom/: core_logic_tests.rs  theme_tests.rs
