[package]
name = "polindora"
version = "0.1.0"
edition = "2021"
description = "Premium native Linux Pomodoro productivity app"
license = "MIT"
repository = "https://github.com/yosantosh/polindora"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
cxx = "1"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }

[package.metadata.deb]
maintainer = "Polindora Maintainers"
copyright = "2026, Polindora Maintainers"
license-file = ["LICENSE", "0"]
extended-description = "A premium native Linux Pomodoro workflow app built with Rust and QML."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/polindora", "usr/bin/", "755"],
  ["packaging/polindora.desktop", "usr/share/applications/polindora.desktop", "644"],
  ["assets/icons/polindora.svg", "usr/share/icons/hicolor/scalable/apps/polindora.svg", "644"]
]
